@@ -349,7 +349,25 @@ specifier|final
 name|String
 name|BLOCK_POOL_ID_PATTERN_BASE
 init|=
-literal|"/BP-\\d+-\\d{1,3}\\.\\d{1,3}\\.\\d{1,3}\\.\\d{1,3}-\\d+/"
+name|Pattern
+operator|.
+name|quote
+argument_list|(
+name|File
+operator|.
+name|separator
+argument_list|)
+operator|+
+literal|"BP-\\d+-\\d{1,3}\\.\\d{1,3}\\.\\d{1,3}\\.\\d{1,3}-\\d+"
+operator|+
+name|Pattern
+operator|.
+name|quote
+argument_list|(
+name|File
+operator|.
+name|separator
+argument_list|)
 decl_stmt|;
 DECL|field|BLOCK_POOL_PATH_PATTERN
 specifier|private
